--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -19,6 +19,10 @@ Note: All dev releases are subject to breaking changes for new work since the pr
 
 == Release 1.10
 
+=== 1.10.0-RC5 (Dec 11, 2018)
+
+* https://dev.clojure.org/jira/browse/CLJ-2454[CLJ-2454] - fix IllegalAccessException from invoking matching reflective call
+
 === 1.10.0-RC4 (Dec 7, 2018)
 
 * https://dev.clojure.org/jira/browse/CLJ-2449[CLJ-2449] - make serialized-require private
