fix template and meta for equality guid

--- a/content/guides/equality.adoc
+++ b/content/guides/equality.adoc
@@ -1,8 +1,11 @@
 = Equality
 Andy Fingerhut
 2018-05-08
-:jbake-type: page
+:type: guides
 :toc: macro
+:icons: font
+
+ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 This document discusses the concept of equality in Clojure, including the functions `=`, `==`, and `identical?`, and how they differ from Java's `equals` method.  It also has some description of Clojure's `hash`, and how it differs from Java's `hashCode`. The beginning of this guide provides a summary of the most important information for quick reference followed by a much more extensive review of the details.
 
