Add Clojurians Zulip

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -12,6 +12,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://groups.google.com/group/clojure[Clojure Google Group]
 * #clojure IRC channel on https://freenode.net[freenode.net]
 * http://clojurians.net[Clojurians Slack Chat]
+* https://clojurians.zulipchat.com[Clojurians Zulip Chat]
 * https://dev.clojure.org/display/community/Clojure+User+Groups[Clojure User Groups]
 * http://planet.clojure.in/[Planet Clojure] blog aggregator
 * https://clojureverse.org[Clojureverse]
