--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -17,6 +17,10 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 Note: All dev releases are subject to breaking changes for new work since the prior release.
 
+== Release 1.11
+
+No releases yet.
+
 == Release 1.10
 
 === 1.10.0-RC5 (Dec 11, 2018)
