--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -7,23 +7,31 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Stable Release: 1.9.0 (Dec 8, 2017)
+== Stable Release: 1.10.0 (Dec 17, 2018)
 
 * See: <<xref/../../guides/getting_started#,Getting Started>>
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.9.0/[Clojure 1.9.0]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0/[Clojure 1.10.0]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
-* Requirements: Java 6 or higher (recommended: Java 8 or Java 11)
+* Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
 
-== Development Release: 1.10.0-RC5 (Dec 11, 2018)
+== Development Release: none available for next release yet
 
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0-RC5/[Clojure 1.10.0-RC5]
-* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.0*[Clojure 1.10 pre-release builds]
 * <<devchangelog#,Dev changelog>>
 * Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
 
 == Clojure Source
 
-Clojure source code is hosted at https://github.com/clojure/clojure[github.com/clojure/clojure]. Builds of the very latest version of Clojure's master branch are available at https://oss.sonatype.org/content/repositories/snapshots/org/clojure/clojure/1.9.0-master-SNAPSHOT/[oss.sonatype.org].
+Clojure source code is hosted at https://github.com/clojure/clojure[github.com/clojure/clojure]. Builds of the very latest version of Clojure's master branch are available at https://oss.sonatype.org/content/repositories/snapshots/org/clojure/clojure/1.11.0-master-SNAPSHOT/[oss.sonatype.org].
+
+== Get Clojure via deps.edn
+
+Specify the version of Clojure that you want in your deps.edn:
+
+[source,clojure]
+----
+{:deps
+ {org.clojure/clojure {:mvn/version "1.10.0"}}}
+----
 
 == Get Clojure via Leiningen
 
@@ -31,9 +39,9 @@ Modify the dependencies and repositories sections of your https://leiningen.org/
 [source,clojure]
 ----
 ; under dependencies, select the release of clojure that you want
-:dependencies [[org.clojure/clojure "1.9.0"]]
-
+:dependencies [[org.clojure/clojure "1.10.0"]]
 ----
+
 == Where did Clojure Contrib go?
 
 If you are migrating from a pre-1.3 version of Clojure, please see https://dev.clojure.org/display/community/Where+Did+Clojure.Contrib+Go[this page] for migration help regarding old contrib libraries.
