--- a/content/reference/repl_and_main.adoc
+++ b/content/reference/repl_and_main.adoc
@@ -158,8 +158,8 @@ Exceptions thrown during all phases (exception `:execution`) will have ex-data a
 The clojure.main REPL includes the categorization and printing of errors by default, but the individual steps of this process are exposed as well for other REPLs to use, specifically the functions:
 
 * http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/Throwable-%3Emap[pass:[Throwable->map]] - converts an Exception chain into Clojure data
-* http://clojure.github.io/clojure/branch-master/clojure.main-api.html#clojure.main/ex-triage[ex-triage] - analyzes Clojure exception data to pull relevant information from the top and bottom of the exception chain into a map describing just the set of data needed to format an exception string
-* http://clojure.github.io/clojure/branch-master/clojure.main-api.html#clojure.main/ex-str[ex-str] - produces a phase-appropriate message given a set of exception data
+* http://clojure.github.io/clojure/clojure.main-api.html#clojure.main/ex-triage[ex-triage] - analyzes Clojure exception data to pull relevant information from the top and bottom of the exception chain into a map describing just the set of data needed to format an exception string
+* http://clojure.github.io/clojure/clojure.main-api.html#clojure.main/ex-str[ex-str] - produces a phase-appropriate message given a set of exception data
 
 The clojure.main REPL combines these functions in a pipeline to produce the printed exception message: `pass:[(-> ex Throwable->map clojure.main/ex-triage clojure.main/ex-str)]`. Other REPLs can use one or more pieces of this pipeline as necessary when building or customizing their exception printing.
 
@@ -167,7 +167,7 @@ The clojure.main REPL combines these functions in a pipeline to produce the prin
 
 tap is a shared, globally accessible system for distributing a series of informational or diagnostic values to a set of (presumably effectful) handler functions. It can be used as a better debug `prn`, or for facilities like logging etc.
 
-http://clojure.github.io/clojure/branch-master/clojure.core-api.html#clojure.core/tap%3E[`pass:[tap>]`] sends a value to the set of taps. Taps can be added with http://clojure.github.io/clojure/branch-master/clojure.core-api.html#clojure.core/add-tap[`add-tap`] and will be called with any value sent to tap>. The tap function may (briefly) block (e.g. for streams) and will never impede calls to tap>, but blocking indefinitely may cause tap values to be dropped. If no taps are registered, tap> discards. Remove taps with http://clojure.github.io/clojure/branch-master/clojure.core-api.html#clojure.core/remove-tap[`remove-tap`].
+http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/tap%3E[`pass:[tap>]`] sends a value to the set of taps. Taps can be added with http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/add-tap[`add-tap`] and will be called with any value sent to tap>. The tap function may (briefly) block (e.g. for streams) and will never impede calls to tap>, but blocking indefinitely may cause tap values to be dropped. If no taps are registered, tap> discards. Remove taps with http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/remove-tap[`remove-tap`].
 
 == Launching a Socket Server
 
@@ -226,7 +226,7 @@ Main entry point: `https://clojure.github.io/clojure/clojure.main-api.html#cloju
 
 Reusable REPL: `https://clojure.github.io/clojure/clojure.main-api.html#clojure.main/repl[clojure.main/repl]`
 
-Error handling: `http://clojure.github.io/clojure/branch-master/clojure.main-api.html#clojure.main/ex-triage[clojure.main/ex-triage]` `http://clojure.github.io/clojure/branch-master/clojure.main-api.html#clojure.main/ex-str[clojure.main/ex-str]`
+Error handling: `http://clojure.github.io/clojure/clojure.main-api.html#clojure.main/ex-triage[clojure.main/ex-triage]` `http://clojure.github.io/clojure/clojure.main-api.html#clojure.main/ex-str[clojure.main/ex-str]`
 
 Allowing set! for the customary REPL vars: `https://clojure.github.io/clojure/clojure.main-api.html#clojure.main/with-bindings[clojure.main/with-bindings]`
 
