--- a/content/community/downloads_older.adoc
+++ b/content/community/downloads_older.adoc
@@ -27,3 +27,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://repo1.maven.org/maven2/org/clojure/clojure-contrib/1.2.0/[Clojure Contrib 1.2.0] (February, 2011)
 * https://repo1.maven.org/maven2/org/clojure/clojure-contrib/1.1.0/[Clojure Contrib 1.1.0]
 * https://repo1.maven.org/maven2/org/clojure/clojure-contrib/1.0.0/[Clojure Contrib 1.0.0]
+
+== Where did Clojure Contrib go?
+
+If you are migrating from a pre-1.3 version of Clojure, please see https://dev.clojure.org/display/community/Where+Did+Clojure.Contrib+Go[this page] for migration help regarding old contrib libraries.
