--- a/content/events/2019/clojurenorth.adoc
+++ b/content/events/2019/clojurenorth.adoc
@@ -8,6 +8,13 @@ Clojure/north
 :jbake-start: 2019-04-19
 :jbake-end: 2019-04-20
 
-Clojure/north is Canada's first Clojure conference. It is a non-profit event from the Clojure community for the community. Our goal is to share knowledge and be an accessible, enjoyable event for all.
+Clojure/north is Canada's first Clojure conference. It is a non-profit event from the Clojure community for the community with three main objectives.
+
+1. Share knowledge within the Clojure community
+2. Grow the Clojure community by offering accessible talks to newcomers
+3. Demonstrate with the broader community how Clojure is being used to solve problems
+
+We hope to see you there!
 
 * CFP: https://clojurenorth.typeform.com/to/YuveUZ
+* Tickets: https://ti.to/clojure-north/clojure-north-2019
