--- a/content/events/2019/clojurenorth.adoc
+++ b/content/events/2019/clojurenorth.adoc
@@ -10,9 +10,9 @@ Clojure/north
 
 Clojure/north is Canada's first Clojure conference. It is a non-profit event from the Clojure community for the community with three main objectives.
 
-1. Share knowledge within the Clojure community
-2. Grow the Clojure community by offering accessible talks to newcomers
-3. Demonstrate with the broader community how Clojure is being used to solve problems
+. Share knowledge within the Clojure community
+. Grow the Clojure community by offering accessible talks to newcomers
+. Demonstrate with the broader community how Clojure is being used to solve problems
 
 We hope to see you there!
 
