--- a/content/community/success_stories.adoc
+++ b/content/community/success_stories.adoc
@@ -5,7 +5,7 @@ Justin Gehtland
 :toc: macro
 :icons: font
 
-Here are just some of the public success stories from companies using Clojure.  If you'd like to be added to this list, please contact __alex.miller@cognitect.com__.
+Here are just some of the public success stories from companies using Clojure.  If you'd like to be added to this list, please https://goo.gl/forms/eBOzyNESFNf9DxJa2[complete this form].
 
 ++++
 		<link rel="stylesheet" type="text/css" href="/css/success_stories.css" />
@@ -426,6 +426,23 @@ Here are just some of the public success stories from companies using Clojure.  
                     <cite>
                       <strong>Vitaly Radionov</strong>
                       Head of R&amp;D, AnyChart
+                    </cite>
+                  </blockquote>
+                </li>
+                <li>
+                  <p><img style="border: 3px solid #ebebeb;" src="/images/logos/gojek.jpg" /></p>
+                  <p>
+                    At <a target="gojek" href="https://www.gojek.io/">GO-JEK</a>, we rewrote our Allocation Engine in Clojure which enabled which enabled us to serve millions of customers to find a suitable drive for them.
+                  </p>
+                  <hr>
+                  <p>
+                    <span class='read-more'>Watch Abinav and Kartik <a target="testimonial" href="https://www.youtube.com/watch?v=3y7xzH8jB8A">discuss</a> at EuroClojure 2017.</span>
+                  </p>
+                  <blockquote style='margin-left: 0; padding: 0'>
+                    <p>TODO</p>
+                    <cite>
+                      <strong>someone</strong>
+                      title
                     </cite>
                   </blockquote>
                 </li>
