--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -16,7 +16,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 == Development Release: none available for next release yet
 
--* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.11.0*[Clojure 1.11 pre-release builds]
+* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.11.0*[Clojure 1.11 pre-release builds]
 * <<devchangelog#,Dev changelog>>
 * Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
 
