--- a/content/community/success_stories.adoc
+++ b/content/community/success_stories.adoc
@@ -436,7 +436,7 @@ Here are just some of the public success stories from companies using Clojure.  
                   </p>
                   <hr>
                   <p>
-                    <span class='read-more'>Watch Abinav and Kartik <a target="testimonial" href="https://www.youtube.com/watch?v=3y7xzH8jB8A">discuss</a> at EuroClojure 2017.</span>
+                    <span class='read-more'>Watch Abhinav and Kartik <a target="testimonial" href="https://www.youtube.com/watch?v=3y7xzH8jB8A">discuss</a> at EuroClojure 2017.</span>
                   </p>
                   <blockquote style='margin-left: 0; padding: 0'>
                     <p>We were looking for a language which allows us to express our domain beautifully at the heart of our matchmaking system. Clojure was a way to go which allowed us to write high-level abstraction for matching drivers and customers.</p>
