--- a/content/about/state.adoc
+++ b/content/about/state.adoc
@@ -77,4 +77,4 @@ Clojure is a functional language that explicitly supports programs as models and
 
 In coming to Clojure from an OO language, you can use one of its <<xref/../../reference/data_structures#,persistent collections>>, e.g. maps, instead of objects. Use values as much as possible. And for those cases where your objects are truly modeling identities (far fewer cases than you might realize until you start thinking about it this way), you can use a Ref or Agent with e.g. a map as its state in order to model an identity with changing state. If you want to encapsulate or abstract away the details of your values, a good idea if they are non-trivial, write a set of functions for viewing and manipulating them. If you want polymorphism, use Clojure's multimethods.
 
-In the local case, since Clojure does not have mutable local variables, instead of building up values in a mutating loop, you can instead do it functionally with <<xref/../../reference/special_forms#recur#,recur>> or https://clojure.github.com/clojure/clojure.core-api.html#clojure.core/reduce[reduce].
+In the local case, since Clojure does not have mutable local variables, instead of building up values in a mutating loop, you can instead do it functionally with <<xref/../../reference/special_forms#recur,recur>> or https://clojure.github.com/clojure/clojure.core-api.html#clojure.core/reduce[reduce].
