--- a/content/guides/faq.adoc
+++ b/content/guides/faq.adoc
@@ -320,7 +320,7 @@ If you do need extra dependencies, try the following, courtesy Dominic Monroe, s
 == Contributing
 
 [[ca]]
-**<<faq##ca,Why does Clojure require that contributors first sign a contributor agreement (CA)?>>**
+**<<faq#ca,Why does Clojure require that contributors first sign a contributor agreement (CA)?>>**
 
 See http://clojure.org/contributing
 
