--- a/content/reference/namespaces.adoc
+++ b/content/reference/namespaces.adoc
@@ -25,7 +25,7 @@ The current namespace, _pass:[*ns*]_ can and should be set only with a call to h
 
 [%hardbreaks]
 Creating and switching to a namespace: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/in-ns[in-ns] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/create-ns[create-ns]
-Adding to a namespace: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/alias[alias] <<special_forms#def#,def>> https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/import[import] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/intern[intern] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/refer[refer]
+Adding to a namespace: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/alias[alias] <<special_forms#def,def>> https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/import[import] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/intern[intern] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/refer[refer]
 Finding what namespaces exist: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/all-ns[all-ns] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/find-ns[find-ns]
 Examining a namespace: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns-name[ns-name] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns-aliases[ns-aliases] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns-imports[ns-imports] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns-interns[ns-interns] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns-map[ns-map] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns-publics[ns-publics] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns-refers[ns-refers]
 Getting a namespace from a symbol: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/resolve[resolve] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns-resolve[ns-resolve] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/namespace[namespace]
