--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -9,7 +9,7 @@ Please support these fine books about Clojure.
 
 _Listed in order of descending release date of newest edition._
 
-[width="80", cols="<.^30a,.^70"]
+[width="80", cols="<.^30a,.^70", role="table"]
 |===
 
 | image::https://s3.amazonaws.com/titlepages.leanpub.com/elementsofclojure/small[Elements of Clojure,link="https://leanpub.com/elementsofclojure"]
