--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -9,7 +9,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 
 Also, check out the <<success_stories#,Clojure Success Stories>> and <<community_stories#,Community Stories>> pages!
 
-[format="csv", options="header"]
+[format="csv", options="header", role="table"]
 |===
 include::companies.csv[]
 |===
